[package]
name = "dewiz-stealth-address"
version = "0.1.0"
edition = "2021"
description = "ERC-5564 stealth address implementation for EVM-compatible blockchains"

[dependencies]
k256 = { version = "0.13", features = ["arithmetic"] }
sha3 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
