[package]
name = "dewiz-stealth-address"
version = "0.1.0"
edition = "2021"
description = "ERC-5564 stealth address implementation for EVM-compatible blockchains"

[dependencies]
k256 = { version = "0.13", features = ["arithmetic"] }
sha3 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
alloy = "1.7.3"

[dev-dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = { version = "1.48", features = ["full"] }
dotenvy = "0.15.7"
